--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5",
-        "symfony/yaml": "^4.2"
+        "symfony/yaml": "^4.2",
+        "php-coveralls/php-coveralls": "^2.1"
     },
     "license": "MIT",
     "autoload": {
