--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -1,9 +1,10 @@
 <?php
 
 $finder = PhpCsFixer\Finder::create()
-    ->in(__DIR__ . DIRECTORY_SEPARATOR . 'fixtures')
-    ->in(__DIR__ . DIRECTORY_SEPARATOR . 'src')
-    ->in(__DIR__ . DIRECTORY_SEPARATOR . 'tests')
+    ->in(__DIR__)
+    ->notPath('venodr')
+    ->name('*.php')
+    ->name('php-header-file')
 ;
 
 $header = <<<'HEADER'
